<resources>
    <string name="app_name">My Application dsdsd</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="login_form_title">login_form_title</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">Signin</string>
    <string name="welcome_to_popo">Welcome to PoPo</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="click_to_signin">Click to Signin</string>
    <string name="haveAccount">+@string/Already Registered? Sign in here</string>
    <string name="diary_title">Diary Title</string>
    <string name="diary_entry">Diary entry</string>
    <string name="date">Date</string>
    <string name="word_count">Word Count</string>
    <string name="logout">Logout</string>
    <string name="save">save</string>
    <string name="add">Add</string>
    <string name="save_entry">Save Entry</string>
    <string name="remove">Remove</string>
</resources>